[ADD] new functionality for query companies

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -20,6 +20,10 @@
         <p>?type = the type of the transport</p>
         <p>?p = the page number</p>
         <p>?children = Has to be defined if their has to be no children or only children (true = only children | false = only parents | undefined = both)</p>
+        <h2>/company</h2>
+        <p>Will return company data depending on the parameters you fill in.</p>
+        <h3>Parameters</h3>
+        <p>?q = a piece of the station name (minimal 4 characters)</p>
     </main>
 </body>
 </html>
